# cppbase

./: .gitignore  CMakeLists.txt  README.md
include/: CBase.hpp
src/: CBase.cpp
test/: TestCBase.cpp  TestCBase.hpp
